Creación de la pantalla "Home"

--- a/home.html
+++ b/home.html
@@ -7,6 +7,6 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Resultados de la proyección manual</h1>
+        <h1>Home</h1>
     </body>
 </html>
