--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="./vista/css/style.css">
 </head>
 <body>
-    <div class="container_mobile">
-        <div class="img_background">
+    <div class="container_mobile img_background">
             <div>
-                <img src="/vista/" alt="logo_farmwatch">
-            <div>
-            </div>
-                <h1>Ingresa a tu cuenta</h1>
+                <div>
+                    <img src="/vista/" alt="logo_farmwatch">
+                <div>
+                </div>
+                    <h1>Ingresa a tu cuenta</h1>
+                </div>
             </div>
         </div>
         <div>
