--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div>
-            <form action="../controlador/php/enviar_formulario.php" method="post">
+            <form action="./vista/" method="post">
                 <div class="form-group"></div>
                     <label for="name">Clave de Producto</label>
                     <br>
