--- a/home.html
+++ b/home.html
@@ -2,11 +2,22 @@
 <html lang="es">
     <head>
         <title>FarmWatch</title>
+        <script src="https://unpkg.com/@phosphor-icons/web"></script>
+        <link rel="stylesheet" href="home.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Home</h1>
+        <div class="upper-div">
+            <div class="menu"><i class="ph-bold ph-list"></i></div>
+            <div class="data1">
+                <h1>Próximo recorrido programado</h1>
+                <h2>19 de octubre (30 días)</h2>
+            </div>
+            <div class="clima">
+                
+            </div>
+        </div>
     </body>
 </html>
