--- a/vista/home.html
+++ b/vista/home.html
@@ -16,7 +16,7 @@
                 <h2>19 de octubre (30 días)</h2>
             </div>
             <div class="clima">
-                
+                <img src="Widget Clima.png" alt="">
             </div>
         </div>
     </body>
