--- a/vista/historial_de_datos.html
+++ b/vista/historial_de_datos.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>FarmWatch</title>
         <script src="https://unpkg.com/@phosphor-icons/web"></script>
         <link rel="stylesheet" href="home.css">
