--- a/vista/home.html
+++ b/vista/home.html
@@ -3,7 +3,7 @@
     <head>
         <title>FarmWatch</title>
         <script src="https://unpkg.com/@phosphor-icons/web"></script>
-        <link rel="stylesheet" href="home.css">
+        <link rel="stylesheet" href="../vista/css/home.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
@@ -16,8 +16,22 @@
                 <h2>19 de octubre (30 días)</h2>
             </div>
             <div class="clima">
-                <img src="Widget Clima.png" alt="">
+                <img src="img/Widget Clima.png" alt="">
             </div>
+        </div>
+        <div class="dias">
+            <div class="dia">23</div>
+            <div class="dia">23</div>
+            <div class="dia">23</div>
+            <div class="dia">23</div>
+            <div class="dia">23</div>
+        </div>
+        <div class="estado">
+            <button class="estado-cultivo">Estado de mi cultivo</div>
+        </div>
+        <div class="dron-info">
+            <img src="img/dron-imagen.png" alt="">
+            <h3 style="justify-content: center;">El dron tiene poca batería.</h3>
         </div>
     </body>
 </html>
