--- a/index.html
+++ b/index.html
@@ -4,27 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="./vista/css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container_mobile img_background">
+    <div class="container_mobile">
+        <div class="img_background">
             <div>
+                <img src="./vista/img/logo.svg" alt="logo_farmwatch" class="logo_padding">
+            </div>
+            <div class="width_login">
                 <div>
-                    <img src="/vista/" alt="logo_farmwatch">
-                <div>
+                    <h1 class="dm_sans_big">Ingresa a tu cuenta</h1>
                 </div>
-                    <h1>Ingresa a tu cuenta</h1>
+                <div>
+                    <h2 class="dm_sans_normal_pad">Por favor ingresa las credenciales que recibiste.</h2>
                 </div>
             </div>
         </div>
+    </div>
         <div>
             <form action="./vista/" method="post">
-                <div class="form-group"></div>
-                    <label for="name">Clave de Producto</label>
+                <div class="form-group">
+                    <label for="name">Nombre de Usuario</label>
                     <br>
                     <input type="text" class="form-control" id="name" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
                 </div>
-                <div class="form-group"></div>
+                <div class="form-group">
                     <label for="password">Contraseña</label>
                     <br>
                     <input type="password" class="form-control" id="password" name="password" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
@@ -34,7 +42,7 @@
                     <br>
                     <input type="tel" class="form-control" id="clave_producto" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
                 </div>
-                <div class="d-flex" style="justify-content: space-evenly;"></div>
+                <div class="d-flex" style="justify-content: space-evenly;">
                     <button type="submit" class="btn btn-primary btn-lg poppins-medium">Iniciar Sesion</button>
                 </div>
             </form>
