--- a/vista/proyeccion_manual.html
+++ b/vista/proyeccion_manual.html
@@ -3,9 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Proyección Manual</title>
 </head>
 <body>
-    
+    <div class="container_navbar"></div>
+        <div class="menu"><i class="ph-bold ph-list"></i></div>
+        <div class="widget">
+            <img src="./img/widget_clima.svg" alt="widget_clima" srcset="">
+        </div>
+    <div>
+        <h1>Proyección Manual</h1>
+        <h2>Ingresa las metricas de manera manual para generar 
+            proyecciones con ellas.
+        </h2>
+    </div>
+    <div>
+        <form action="/submit_form" method="post">
+            <label for="">Nombre del dato</label>
+            <br>
+            <input type="text" id="name" name="name" placeholder="Eg: abdefg" required>
+            <br>
+            <label for="">Nombre del dato</label>
+            <br>
+            <input type="text" id="name1" name="name" placeholder="Eg: abdefg" required>
+            <br>
+            <label for="">Nombre del dato</label>
+            <br>
+            <input type="text" id="name2" name="name" placeholder="Eg: abdefg" required>
+            <br>
+            <label for="">Nombre del dato</label>
+            <br>
+            <input type="text" id="name3" name="name" placeholder="Eg: abdefg" required>
+            <br>
+            <label for="">Nombre del dato</label>
+            <br>
+            <input type="text" id="name4" name="name" placeholder="Eg: abdefg" required>
+
+        </form>
+    </div>
 </body>
 </html>
