--- a/index.html
+++ b/index.html
@@ -19,28 +19,28 @@
                 <div>
                     <h1 class="dm_sans_big">Ingresa a tu cuenta</h1>
                 </div>
-                <div>
+                <div style="padding-bottom: 40px;">
                     <h2 class="dm_sans_normal_pad">Por favor ingresa las credenciales que recibiste.</h2>
                 </div>
             </div>
         </div>
     </div>
-        <div>
+        <div class="pad_login">
             <form action="./vista/" method="post">
                 <div class="form-group">
                     <label for="name">Nombre de Usuario</label>
                     <br>
-                    <input type="text" class="form-control" id="name" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
+                    <input type="text" class="form-control" id="name" placeholder="" style="font-family: 'dm_sans_normal_pad', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d; padding: 0px !important;">
                 </div>
                 <div class="form-group">
                     <label for="password">Contraseña</label>
                     <br>
-                    <input type="password" class="form-control" id="password" name="password" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
+                    <input type="password" class="form-control" id="password" name="password" placeholder="" style="font-family: 'dm_sans_normal_pad', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d; padding: 0px !important;">
                 </div>
                 <div class="form-group">
                     <label for="clave_producto">Clave de Producto</label>
                     <br>
-                    <input type="tel" class="form-control" id="clave_producto" placeholder="" style="font-family: 'Montserrat', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d;">
+                    <input type="tel" class="form-control" id="clave_producto" placeholder="" style="font-family: 'dm_sans_normal_pad', sans-serif;font-weight: 500; color: #ffffff; font-size: 16px; background: transparent; border: transparent; border-radius: 0px; border-bottom: 2px solid #d9d9d94d; padding: 0px !important;">
                 </div>
                 <div class="d-flex" style="justify-content: space-evenly;">
                     <button type="submit" class="btn btn-primary btn-lg poppins-medium">Iniciar Sesion</button>
