--- a/vista/proyeccion_manual.html
+++ b/vista/proyeccion_manual.html
@@ -18,14 +18,14 @@
         </h2>
     </div>
     <div>
-        <form action="./js/javascript.js" method="post">
+        <form id="proyeccionForm">
             <label for="">Altitud:</label>
             <br>
             <input type="text" id="altitud" name="altitud" placeholder="Eg: 2200 m" required>
             <br>
             <label for="">NDVI:</label>
             <br>
-            <input type="text" id="nvdi" name="nvdi" placeholder="Eg: 0.72" required>
+            <input type="text" id="ndvi" name="ndvi" placeholder="Eg: 0.72" required>
             <br>
             <label for="">Temperatura del suelo:</label>
             <br>
@@ -41,6 +41,6 @@
             <br>
             <button type="submit">Obtener Proyecciones</button>
         </form>
-    </div>
+    </div>    
 </body>
 </html>
