Link Javascript Form

--- a/vista/proyeccion_manual.html
+++ b/vista/proyeccion_manual.html
@@ -41,6 +41,9 @@
             <br>
             <button type="submit">Obtener Proyecciones</button>
         </form>
-    </div>    
+    </div>
+    
+    <script src="js/javascript.js"></script>
+
 </body>
 </html>
