--- a/vista/prueba_ia.html
+++ b/vista/prueba_ia.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba IA - Proyección</title>
-    <script src="js/main.js" defer></script> <!-- Asegúrate de que el script esté cargado -->
+    <script src="./js/javascript.js" defer></script> <!-- Asegúrate de que el script esté cargado -->
 </head>
 <body>
     <h1>Formulario de Proyección de Datos Agrícolas</h1>
@@ -28,6 +28,10 @@
         
         <button type="submit">Enviar Proyección</button>
     </form>
-    
+
+    <!-- Aquí aparecerán los resultados del análisis -->
+    <h2>Resultados del Análisis</h2>
+    <div id="resultadosProyeccion"></div>
+
 </body>
 </html>
