--- a/vista/home.html
+++ b/vista/home.html
@@ -22,12 +22,12 @@
     <div class="sidebar" id="sidebar">
         <div class="menu-items">
             <ul>
-                <li><i class="bi bi-bell-fill"></i> Alertas <span class="badge">2</span></li>
-                <li><i class="bi bi-house-door-fill"></i> Pantalla de Inicio</li>
-                <li><i class="bi bi-clock-history"></i> Historial de datos</li>
-                <li><i class="bi bi-graph-up"></i> Proyección Manual</li>
-                <li><i class="bi bi-gear-fill"></i> Ajustes</li>
-                <li><i class="bi bi-box-arrow-right"></i> Cerrar sesión</li>
+                <li><a href="./alertas.html"><i class="bi bi-bell-fill"></i> Alertas <span class="badge">2</span></a></li>
+                <li><a href="./home.html"><i class="bi bi-house-door-fill"></i> Pantalla de Inicio</a></li>
+                <li><a href=""><i class="bi bi-clock-history"></i> Historial de datos</a></li>
+                <li><a href="./prueba_ia.html"><i class="bi bi-graph-up"></i> Proyección Manual</a></li>
+                <li><a href=""><i class="bi bi-gear-fill"></i> Ajustes</a></li>
+                <li><a href=""><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
             </ul>
         </div>
         <div class="profile-picture">
