--- a/vista/home.html
+++ b/vista/home.html
@@ -26,6 +26,7 @@
                 <li><a href="./home.html"><i class="bi bi-house-door-fill"></i> Pantalla de Inicio</a></li>
                 <li><a href=""><i class="bi bi-clock-history"></i> Historial de datos</a></li>
                 <li><a href="./prueba_ia.html"><i class="bi bi-graph-up"></i> Proyección Manual</a></li>
+                <li><a href="./resultados_proyeccion.html"><i class="bi bi-graph-up"></i> Resultados Proyeccion </a></li>
                 <li><a href=""><i class="bi bi-gear-fill"></i> Ajustes</a></li>
                 <li><a href=""><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
             </ul>
