--- a/vista/prueba_ia.html
+++ b/vista/prueba_ia.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prueba IA - Proyección</title>
     <script src="./js/javascript.js" defer></script> <!-- Asegúrate de que el script esté cargado -->
+    <link rel="stylesheet" href="../vista/css/style.css">
+    <title>Resultados de proyeccion manual</title>
+    <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <link rel="stylesheet" href="home.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Formulario de Proyección de Datos Agrícolas</h1>
+    <h1>Proyección manual</h1>
+    <h2 style="font-family:'DM Sans'; font-size: 16px; font-weight: 500;">Ingresa las metricas de manera manual para generar proyecciones con ellas.</h2>
     
     <!-- Formulario -->
     <form id="proyeccionForm">
@@ -26,12 +34,11 @@
         <label for="cigreen">CI Green:</label>
         <input type="text" id="cigreen" name="cigreen"><br><br>
         
-        <button type="submit">Enviar Proyección</button>
+        <button type="submit" class="generar">Generar cálculo</button>
     </form>
 
     <!-- Aquí aparecerán los resultados del análisis -->
-    <h2>Resultados del Análisis</h2>
+    <h1>Resultados del Análisis</h1>
     <div id="resultadosProyeccion"></div>
-
 </body>
 </html>
